Fixed letter spacing

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ h3{
     font-weight: 400;
     font-size: 24px;
     line-height: 30px;
-    letter-spacing: 4px;
+    letter-spacing: 3px;
 
     color: #FFFFFF;
     padding: 5%;
@@ -41,7 +41,7 @@ p{
     font-weight: 400;
     font-size: 24px;
     line-height: 30px;
-    letter-spacing: 3px;
+    letter-spacing: 2px;
 }
 
 .navbar{
